Gateway and Identity Code

--- a/.env.example
+++ b/.env.example
@@ -30,3 +30,6 @@ MAX_DYNAMODB_TABLES_PER_REQUEST=5
 # Security
 ENABLE_AUDIT_LOGGING=true
 REQUIRE_APPROVAL_FOR_DESTRUCTIVE_OPERATIONS=true
+
+# Set to 'false' if you encounter SSL certificate verification errors
+SSL_VERIFY=true
