--- a/.env.example
+++ b/.env.example
@@ -1,33 +1,78 @@
-# AWS Configuration
-AWS_REGION=us-east-1
-AWS_ACCOUNT_ID=YOUR_AWS_ACCOUNT_ID_HERE
+# =============================================================================
+# AWS Resource Manager - Environment Configuration
+# =============================================================================
+# Copy this file to src/.env and update with your values
+# All variables can also be set as environment variables
 
+# =============================================================================
+# AWS Configuration
+# =============================================================================
+AWS_REGION=ap-south-1
+AWS_ACCOUNT_ID=
+
+# =============================================================================
 # AWS Bedrock Configuration
+# =============================================================================
 BEDROCK_MODEL_ID=anthropic.claude-3-sonnet-20240229-v1:0
-BEDROCK_REGION=us-east-1
+BEDROCK_REGION=ap-south-1
 MAX_TOKENS=4096
 TEMPERATURE=0.7
 
+# =============================================================================
 # Agent Configuration
+# =============================================================================
 AGENT_NAME=aws-resource-manager
 AGENT_DESCRIPTION=AI-powered AWS resource management agent
 MAX_ITERATIONS=10
 VERBOSE=true
 
+# =============================================================================
+# AgentCore Memory Configuration
+# =============================================================================
+# Enable/disable memory features
+MEMORY_ENABLED=true
+
+# Memory ID from 'python -m memory.setup_memory --list'
+# Set this after creating memory with: python -m memory.setup_memory --type short-term
+MEMORY_ID=
+
+# Memory region (defaults to AWS_REGION if not set)
+MEMORY_REGION=ap-south-1
+
+# Days before memory events expire
+MEMORY_EVENT_EXPIRY_DAYS=7
+
+# =============================================================================
+# AgentCore Gateway Configuration
+# =============================================================================
+# API Gateway ID for external metrics API (optional - for Step 2)
+RESOURCE_METRICS_API_ID=
+
+# API Key for external metrics API (optional - for Step 2)
+RESOURCE_METRICS_API_KEY=
+
+# =============================================================================
 # MCP Configuration
+# =============================================================================
 MCP_SERVER_PORT=3000
 MCP_LOG_LEVEL=INFO
 
+# =============================================================================
 # Logging
+# =============================================================================
 LOG_LEVEL=INFO
 LOG_FORMAT=json
 
+# =============================================================================
 # Resource Limits
+# =============================================================================
 MAX_S3_BUCKETS_PER_REQUEST=5
 MAX_LAMBDA_FUNCTIONS_PER_REQUEST=5
 MAX_DYNAMODB_TABLES_PER_REQUEST=5
 
+# =============================================================================
 # Security
+# =============================================================================
 ENABLE_AUDIT_LOGGING=true
 REQUIRE_APPROVAL_FOR_DESTRUCTIVE_OPERATIONS=true
 
